Sun Jul 10 15:09:17 2011  Shota Fukumori  <sorah@tubusu.net>

	* lib/test/unit/assertions.rb: Import documentation patch by Justin
	  Collins. [ruby-core:37225] [Feature #4903]

Sun Jul 10 14:57:36 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: canonicalizes nth and sf.

Sun Jul 10 14:13:50 2011  Koichi Sasada  <ko1@atdot.net>

	* internal.h (rb_thread_call_with_gvl, rb_thread_call_without_gvl):
	  make them visible as experimental C APIs.  fixes Feature #4328.

Sun Jul 10 12:18:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_power): support non-integral
	  exponent.  fixes [Bug #3271]

	* ext/bigdecimal/bigdecimal.c (rmpd_power_by_big_decimal): ditto.

	* ext/bigdecimal/bigdecimal.c (BigDecimal_power_op): add a function to
	  only use for "**" operator.

	* test/bigdecimal/test_bigdecimal.rb: add a bunch of tests for the
	  above changes.

	* ext/bigdecimal/bigdecimal.c (is_integer): add an utility function.

	* ext/bigdecimal/bigdecimal.c (is_negative): ditto.

	* ext/bigdecimal/bigdecimal.c (is_positive): ditto.

	* ext/bigdecimal/bigdecimal.c (is_zero): ditto.

	* ext/bigdecimal/bigdecimal.c (is_one): ditto.

	* ext/bigdecimal/bigdecimal.c (is_even): ditto.

Sun Jul 10 12:08:39 2011  Yusuke Endoh  <mame@tsg.ne.jp>

	* compile.c (when_vals): when a string literal is written on when
	  clause, skip string creation to make it faster.  [ruby-dev:44068]
	  [Feature #5000]

Sun Jul 10 11:35:29 2011  Yusuke Endoh  <mame@tsg.ne.jp>

	* parse.y (reduce_nodes_gen): NODE_RETURN in rescue body must not be
	  reduced when there is an else clause.  This caused bizarre behavior
	  in [Bug #4473] [ruby-core:35629] [ruby-core:37884].

Sun Jul 10 09:46:14 2011  Masaya Tarui  <tarui@ruby-lnag.org>

	* range.c (range_max): fix behavior with excluded end value.
	  [Bug #4591]

Sun Jul 10 09:13:18 2011  Eric Hodel  <drbrain@segment7.net>

	* NEWS:  Fix RubyGems version.  [Ruby 1.9 - Bug #5004]
